--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                    script-src 'self';
                    style-src 'self';
                    img-src 'self' data: https: blob:;
-                   connect-src 'self' https://www.virustotal.com https://ipfs.io https://cloudflare-ipfs.com https://gateway.pinata.cloud https://api.allorigins.win;
+                   connect-src 'self' https:;
                    font-src 'self';
                    object-src 'none';
                    base-uri 'self';
@@ -52,7 +52,7 @@
                     <p class="tagline">Secure validation &amp; preview for NFT metadata</p>
                 </div>
                 <nav class="header-nav" aria-label="Primary navigation">
-                    <button class="btn btn-ghost btn-sm" id="about-btn" type="button" aria-expanded="false" aria-controls="about-section">
+                    <button class="btn btn-ghost btn-sm" id="about-btn" type="button" aria-haspopup="dialog" aria-expanded="false">
                         About
                     </button>
                 </nav>
@@ -64,21 +64,30 @@
     <main id="main-content" class="site-main" role="main">
         <div class="container">
 
-            <!-- About Section (Collapsible) -->
-            <section id="about-section" class="about-panel" hidden aria-labelledby="about-heading">
-                <div class="card">
-                    <h2 id="about-heading">About This Tool</h2>
-                    <p>NFT Metadata Scanner validates NFT metadata URLs, scans for security threats using VirusTotal, and safely previews metadata and media. It supports <strong>Enjin Blockchain</strong>, <strong>ERC-721</strong>, and <strong>ERC-1155</strong> metadata standards.</p>
-                    <ul class="feature-list">
-                        <li>HTTPS and IPFS URL validation</li>
-                        <li>VirusTotal malware scanning integration</li>
-                        <li>Metadata standard detection and parsing</li>
-                        <li>Safe media preview with CSP protection</li>
-                        <li>Client-side only &mdash; your data never leaves your browser</li>
-                    </ul>
-                    <button class="btn btn-ghost btn-sm" id="about-close-btn" type="button">Close</button>
+            <!-- About Section (Modal) -->
+            <div id="about-modal" class="modal-overlay" hidden aria-labelledby="about-heading" role="dialog">
+                <div class="modal-content" id="about-modal-content">
+                    <div class="modal-header">
+                        <h2 id="about-heading">About This Tool</h2>
+                        <button class="modal-close-btn" id="about-close-btn" type="button" aria-label="Close modal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>NFT Metadata Scanner validates NFT metadata URLs, scans for security threats using VirusTotal, and safely previews metadata and media. It supports <strong>Enjin Blockchain</strong>, <strong>ERC-721</strong>, and <strong>ERC-1155</strong> metadata standards.</p>
+                        <ul class="feature-list">
+                            <li>HTTPS and IPFS URL validation</li>
+                            <li>VirusTotal malware scanning integration</li>
+                            <li>Metadata standard detection and parsing</li>
+                            <li>Safe media preview with CSP protection</li>
+                            <li>Client-side only &mdash; your data never leaves your browser</li>
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" id="about-ok-btn" type="button">Okay</button>
+                    </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Input Section -->
             <section class="input-section" aria-labelledby="input-heading">
@@ -107,42 +116,125 @@
                         </div>
                         <p id="url-help" class="input-help">Supports HTTPS and IPFS URLs. Enter a link to NFT metadata JSON.</p>
                         <p id="url-error" class="input-error" role="alert" aria-live="polite" hidden></p>
+
+                        <!-- Example URLs (moved up so they appear under the help text) -->
+                        <div class="example-urls">
+                            <span class="example-label">Examples:</span>
+                            <button type="button" class="btn btn-link example-btn" data-url="https://raw.githubusercontent.com/enjin/metadata-samples/main/enjin-example.json">Enjin</button>
+                            <button type="button" class="btn btn-link example-btn" data-url="ipfs://QmYwAPJzv5CZsnA625s3Xf2nemtYgPpHdWEz79ojWnPbdG">IPFS</button>
+                        </div>
+
+                        <!-- Scan Mode Toggle -->
+                        <div class="scan-mode-toggle">
+                            <label class="toggle-label">
+                                <input type="checkbox" id="scan-all-urls" class="toggle-input">
+                                <span class="toggle-slider"></span>
+                                <span class="toggle-text">Scan all URLs in metadata</span>
+                            </label>
+                            <p class="input-help">When enabled, scans all URLs found in metadata (image, external links, media, etc.). When disabled, only scans the main image URL.</p>
+                        </div>
                     </form>
 
-                    <!-- Example URLs -->
-                    <div class="example-urls">
-                        <span class="example-label">Examples:</span>
-                        <button type="button" class="btn btn-link example-btn" data-url="https://raw.githubusercontent.com/enjin/metadata-samples/main/enjin-example.json">Enjin</button>
-                        <button type="button" class="btn btn-link example-btn" data-url="ipfs://QmYwAPJzv5CZsnA625s3Xf2nemtYgPpHdWEz79ojWnPbdG">IPFS</button>
+                    <!-- examples moved above the help text -->
+
+                    <!-- API Key Section (Inline) -->
+                    <div class="api-key-inline">
+                        <div class="api-key-card">
+                            <label for="apikey-input" class="input-label">VirusTotal API Key</label>
+                            <p class="input-help">An API key is required for VirusTotal security scanning. This tool requires a valid VirusTotal API key to perform URL and media security analyses; without a saved key, scanning is disabled.</p>
+                            <div class="input-group">
+                                <input
+                                    type="password"
+                                    id="apikey-input"
+                                    class="input-field"
+                                    placeholder="Enter your VirusTotal API key"
+                                    required
+                                    autocomplete="off"
+                                    spellcheck="false"
+                                    aria-describedby="apikey-help"
+                                >
+                                <button type="button" id="apikey-action-btn" class="btn btn-success btn-sm api-key-action">Save</button>
+                                <button type="button" id="apikey-quota-btn" class="btn btn-secondary btn-sm apikey-quota-btn" disabled>Show Quota</button>
+                            </div>
+                            <p id="apikey-help" class="input-help">Your key is stored locally in your browser only. The key is used to call VirusTotal directly from your browser.</p>
+                            <!-- saved-key display removed (checkmark moved into input) -->
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <!-- API Key Section (Optional) -->
-            <section class="api-key-section" aria-labelledby="apikey-heading">
-                <details class="card card-subtle">
-                    <summary id="apikey-heading">
-                        <span class="details-icon" aria-hidden="true">&#x1f511;</span>
-                        VirusTotal API Key (Optional)
-                    </summary>
-                    <div class="details-content">
-                        <p class="input-help">Providing an API key enables security scanning. Without it, VirusTotal scans will be skipped.</p>
-                        <div class="input-group">
-                            <input
-                                type="password"
-                                id="apikey-input"
-                                class="input-field"
-                                placeholder="Enter your VirusTotal API key"
-                                autocomplete="off"
-                                spellcheck="false"
-                                aria-describedby="apikey-help"
-                            >
-                            <button type="button" id="apikey-save-btn" class="btn btn-secondary btn-sm">Save</button>
-                        </div>
-                        <p id="apikey-help" class="input-help">Key is stored in memory only and never sent to any server besides VirusTotal.</p>
+            <!-- API Key Quota Modal -->
+            <div id="apikey-quota-modal" class="modal-overlay" hidden aria-labelledby="apikey-quota-heading" role="dialog">
+                <div class="modal-content" id="apikey-quota-modal-content">
+                    <div class="modal-header">
+                        <h2 id="apikey-quota-heading">VirusTotal API Quota</h2>
+                        <button class="modal-close-btn" id="apikey-quota-close-btn" type="button" aria-label="Close modal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                </details>
-            </section>
+                    <div class="modal-body">
+                        <p class="input-help">Below are your VirusTotal API quotas (allowed vs used). This information is fetched from VirusTotal using your API key.</p>
+                        <div id="apikey-quota-table-wrap">
+                            <table id="apikey-quota-table" class="quota-table">
+                                <thead>
+                                    <tr><th>Quota</th><th>Allowed</th><th>Used</th></tr>
+                                </thead>
+                                <tbody>
+                                    <!-- Populated dynamically -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" id="apikey-quota-close-footer" type="button">Close</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- API Key Required Modal -->
+            <div id="apikey-required-modal" class="modal-overlay" hidden aria-labelledby="apikey-required-heading" role="dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 id="apikey-required-heading">API Key Required</h2>
+                        <button class="modal-close-btn" id="apikey-required-close-btn" type="button" aria-label="Close modal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>A VirusTotal API key is required to scan URLs. Please save your API key in the <strong>VirusTotal API Key</strong> section before scanning.</p>
+                        <p class="input-help">You can get a free API key by signing up at <a href="https://www.virustotal.com" target="_blank" rel="noopener noreferrer">virustotal.com</a>.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" id="apikey-required-ok-btn" type="button">Got it</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Remove API Key Confirmation Modal -->
+            <div id="remove-confirm-modal" class="modal-overlay" hidden aria-labelledby="remove-confirm-heading" role="dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 id="remove-confirm-heading">Remove API Key?</h2>
+                        <button class="modal-close-btn" id="remove-confirm-close-btn" type="button" aria-label="Close modal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to remove the saved API key? You will need to re-enter it to perform security scans.</p>
+                    </div>
+                    <div class="modal-footer" style="display: flex; gap: 0.5rem; justify-content: flex-end;">
+                        <button class="btn btn-secondary" id="remove-confirm-no-btn" type="button">Cancel</button>
+                        <button class="btn btn-danger" id="remove-confirm-yes-btn" type="button">Remove</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Back Button (shown on results page) -->
+            <div id="back-button-container" class="back-button-container" hidden>
+                <button type="button" id="back-btn" class="btn btn-secondary">
+                    <span aria-hidden="true">← </span>Back to Home
+                </button>
+            </div>
 
             <!-- Validation Pipeline -->
             <section id="pipeline-section" class="pipeline-section" aria-labelledby="pipeline-heading" hidden>
@@ -169,9 +261,9 @@
                             <span class="step-label">Metadata Parsing &amp; Validation</span>
                             <span class="step-status sr-only">pending</span>
                         </li>
-                        <li class="pipeline-step" data-step="media-scan" aria-label="Media Security Scan">
+                        <li class="pipeline-step" data-step="media-scan" aria-label="Media Display">
                             <span class="step-icon" aria-hidden="true">&#x23FA;</span>
-                            <span class="step-label">Media URL Security Scan</span>
+                            <span class="step-label">Media Display</span>
                             <span class="step-status sr-only">pending</span>
                         </li>
                         <li class="pipeline-step" data-step="media-display" aria-label="Media Display">
